src/app/home/play-episode/play-episode.less
.theater-backdrop {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: stretch;
  width: 100%;
  background-color: #000;

  player {
    display: block;
    width: 100%;
    height: 100%;
    flex: 0 1 auto;
  }

  @media (min-width: 1280px) and (min-height: 800px) {
    player {
      width: 1280px;
      height: 720px;
    }
  }
}

.episode-info-container {
  margin-top: 2rem;

  .episode-title {
    .episode-name-cn {
      padding-left: 1em;
      font-size: 0.8em;
      color: lighten(#000, 50%);
    }
  }

  .bangumi-title {
    .name {
      padding-left: 1em;
      font-size: 0.8em;
      color: #696969;
    }
  }

  .episode-list {
    .episode-link {
      display: block;
      text-align: center;
    }
  }
}

